	  0x80 in the Extended BPB which are needed to boot from disk. (Szaka)
	- ntfsinfo: fix two freed memory usages when dumping $SDS and index
	  allocation entries.  (Szaka)
	- libntfs: add ntfs_attr_readall() which reads the entire data 
	  from an ntfs attribute.  (Szaka)
	- libntfs: add ntfs_index_root_get() which reads the index root of 
	  an attribute.  (Szaka)

27/02/2006 - 1.13.0 - Lots and lots and lots of fixes and enhancements.

	- Temporarily disable use of the legal ansi character checking in
	  libntfs/unistr.c::ntfs_names_collate() pending a proper fix at some
	  point.  (Anton)
	- Rewrite gcc version detection logic using the -dumpversion option.
	  Tested on various OS and architectures and gcc versions from 2.95 to
	  4.0.2 with some weird ones like 3.5-blah thrown in, too.  (Anton)
	- Fix bogus le16_to_cpu() which should be le32_to_cpu() when accessing
	  the attribute list entry attribute type in some places in
	  libntfs/attrib.c.  (Anton)
	- Fix silly bug introduced in 1.12.0 which breaks ntfsfix (and others
	  possibly) when calling ntfs_attr_lookup() with AT_UNNAMED name and
	  no ntfs inode in the search context.  (Anton)
	- Fix compilation on OSX in ntfsresize.c, ntfsclone.c, and ntfscmp.c
	  where stderr = stdout is not legal (but happens to work on Linux) to
	  do portable low-level file descriptor mangling.  (Anton)
	- Add test/runlist-data to EXTRA_DIST so it gets included in the
	  distribution otherwise make test fails on released sources.  Solution
	  is not perfect as it also adds the test/runlist-data/CVS directory
	  but it will do at least for me.  (Anton)
	- Fix compilation and warnings in ntfsdecrypt.c on OSX/gcc4.0.1.  The
	  compilation failure was because we use strnlen() which is gnu
	  specific and not present on my current version of OSX so ntfsdecrypt
	  now provides own version if it is not present on system.  (Anton)
	- Fix endianness bug (le16 instead of le32 when accessing mft record